Refactor registry, and make empty collections immutable